...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/customerbarcodeinput"
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/BarCode"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:layout_constraintVertical_bias="0.46"
        android:autofillHints="" />

    <TextView
        android:id="@+id/total"
        android:layout_width="160dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@drawable/minion2" />

    <Button
        android:id="@+id/topayButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/customerbarcodeinput"
        app:layout_constraintHorizontal_bias="0.803"
...
